@@ -1,69 +1,49 @@
-# The builder contains tools and temp files:
-FROM adoptopenjdk/openjdk11:jre-11.0.11_9-alpine AS builder
-RUN apk add --no-cache curl
-ENV TOMCAT_MAJOR=9 \
-    TOMCAT_VERSION=9.0.39 \
-    CATALINA_HOME=/usr/local/tomcat \
-    GEOSERVER_VERSION=2.19.0
+FROM eclipse-temurin:17 as jre-build
+COPY "/target/*.jar" "web-app.jar"
 
-# Get Tomcat Binaries and unzip it
-RUN set -eux; \
-  curl -jkSL --output /tmp/tomcat.tgz http://archive.apache.org/dist/tomcat/tomcat-${TOMCAT_MAJOR}/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz; \
-  mkdir -p $CATALINA_HOME; \
-  tar --extract --file /tmp/tomcat.tgz --directory $CATALINA_HOME --strip-components 1; \
-  rm -rf $CATALINA_HOME/webapps/*
+#RUN jar xf ./*jar
+#RUN jlink --add-modules $(jdeps -cp 'BOOT-INF/lib/*' --ignore-missing-deps --print-module-deps --multi-release base ./*.jar) --strip-debug --no-man-pages --no-header-files --compress=2 --output /javaruntime
 
-# Get Geoserver War file and unzip it 
-RUN set -eux; \
-  curl -jkSL --output /tmp/geoserver.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/geoserver-${GEOSERVER_VERSION}-war.zip; \
-  mkdir /tmp/geoserver; \
-  mkdir /tmp/geoserver-war-unpacked; \
-  mkdir /tmp/geoserver-gdal-plugin; \
-  mkdir /tmp/geoserver-css-plugin; \
-  mkdir /tmp/geoserver-excel-plugin; \
-  unzip -d /tmp/geoserver/ /tmp/geoserver.zip; \
-  unzip -d /tmp/geoserver-war-unpacked  /tmp/geoserver/geoserver.war; \
-  # Remove default data and users. Set up to fail if files do not exist, so we catch changes in the structure in future releases
-  rm -r /tmp/geoserver-war-unpacked/data/coverages; \
-  rm -r /tmp/geoserver-war-unpacked/data/data; \
-  rm -r /tmp/geoserver-war-unpacked/data/demo; \
-  rm -r /tmp/geoserver-war-unpacked/data/layergroups; \
-  rm -r /tmp/geoserver-war-unpacked/data/workspaces; \
-  #rm /tmp/geoserver-war-unpacked/data/security/usergroup/default/users.xml; \
-  curl -jkSL --output /tmp/geoserver-gdal-plugin.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-gdal-plugin.zip; \
-  curl -jkSL --output /tmp/geoserver-css-plugin.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-css-plugin.zip; \
-  curl -jkSL --output /tmp/geoserver-excel-plugin.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-excel-plugin.zip; \
-  curl -jkSL --output /tmp/geoserver-wps-plugin.zip http://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}-wps-plugin.zip; \
-  unzip -d /tmp/geoserver-gdal-plugin/ /tmp/geoserver-gdal-plugin.zip; \
-  unzip -d /tmp/geoserver-css-plugin/ /tmp/geoserver-css-plugin.zip; \
-  unzip -d /tmp/geoserver-excel-plugin/ /tmp/geoserver-excel-plugin.zip; \
-  unzip -d /tmp/geoserver-wps-plugin/ /tmp/geoserver-wps-plugin.zip;
+#FROM alpine:3.14
 
+#ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
+#ENV JAVA_HOME=/opt/java/openjdk
+#ENV PATH "${JAVA_HOME}/bin:${PATH}"
 
-# Start the actual image, and cherry-pick files from the builder:
-FROM adoptopenjdk/openjdk11:jre-11.0.11_9-alpine
-ENV CATALINA_HOME=/usr/local/tomcat
-ENV PATH=$CATALINA_HOME/bin:$PATH
+#RUN apk add --no-cache tzdata --virtual .build-deps curl binutils zstd \
+#    && GLIBC_VER="2.33-r0" \
+#    && ALPINE_GLIBC_REPO="https://github.com/sgerrand/alpine-pkg-glibc/releases/download" \
+#    && GCC_LIBS_URL="https://archive.archlinux.org/packages/g/gcc-libs/gcc-libs-10.1.0-2-x86_64.pkg.tar.zst" \
+#    && GCC_LIBS_SHA256="f80320a03ff73e82271064e4f684cd58d7dbdb07aa06a2c4eea8e0f3c507c45c" \
+#    && ZLIB_URL="https://archive.archlinux.org/packages/z/zlib/zlib-1%3A1.2.11-3-x86_64.pkg.tar.xz" \
+#    && ZLIB_SHA256=17aede0b9f8baa789c5aa3f358fbf8c68a5f1228c5e6cba1a5dd34102ef4d4e5 \
+#    && curl -LfsS https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub -o /etc/apk/keys/sgerrand.rsa.pub \
+#    && SGERRAND_RSA_SHA256="823b54589c93b02497f1ba4dc622eaef9c813e6b0f0ebbb2f771e32adf9f4ef2" \
+#    && echo "${SGERRAND_RSA_SHA256} */etc/apk/keys/sgerrand.rsa.pub" | sha256sum -c - \
+#    && curl -LfsS ${ALPINE_GLIBC_REPO}/${GLIBC_VER}/glibc-${GLIBC_VER}.apk > /tmp/glibc-${GLIBC_VER}.apk \
+#    && apk add --no-cache /tmp/glibc-${GLIBC_VER}.apk \
+#    && curl -LfsS ${ALPINE_GLIBC_REPO}/${GLIBC_VER}/glibc-bin-${GLIBC_VER}.apk > /tmp/glibc-bin-${GLIBC_VER}.apk \
+#    && apk add --no-cache /tmp/glibc-bin-${GLIBC_VER}.apk \
+#    && curl -Ls ${ALPINE_GLIBC_REPO}/${GLIBC_VER}/glibc-i18n-${GLIBC_VER}.apk > /tmp/glibc-i18n-${GLIBC_VER}.apk \
+#    && apk add --no-cache /tmp/glibc-i18n-${GLIBC_VER}.apk \
+#    && /usr/glibc-compat/bin/localedef --force --inputfile POSIX --charmap UTF-8 "$LANG" || true \
+#    && echo "export LANG=$LANG" > /etc/profile.d/locale.sh \
+#    && curl -LfsS ${GCC_LIBS_URL} -o /tmp/gcc-libs.tar.zst \
+#    && echo "${GCC_LIBS_SHA256} */tmp/gcc-libs.tar.zst" | sha256sum -c - \
+#    && mkdir /tmp/gcc \
+#    && zstd -d /tmp/gcc-libs.tar.zst --output-dir-flat /tmp \
+#    && tar -xf /tmp/gcc-libs.tar -C /tmp/gcc \
+#    && mv /tmp/gcc/usr/lib/libgcc* /tmp/gcc/usr/lib/libstdc++* /usr/glibc-compat/lib \
+#    && strip /usr/glibc-compat/lib/libgcc_s.so.* /usr/glibc-compat/lib/libstdc++.so* \
+#    && curl -LfsS ${ZLIB_URL} -o /tmp/libz.tar.xz \
+#    && echo "${ZLIB_SHA256} */tmp/libz.tar.xz" | sha256sum -c - \
+#    && mkdir /tmp/libz \
+#    && tar -xf /tmp/libz.tar.xz -C /tmp/libz \
+#    && mv /tmp/libz/usr/lib/libz.so* /usr/glibc-compat/lib \
+#    && apk del --purge .build-deps glibc-i18n \
+#    && rm -rf /tmp/*.apk /tmp/gcc /tmp/gcc-libs.tar* /tmp/libz /tmp/libz.tar.xz /var/cache/apk/*
 
-RUN apk add --no-cache ttf-dejavu java-gdal curl
-RUN export GDAL_DATA=/usr/share/gdal/
-RUN adduser --disabled-password --uid 1000 1000
-# The Tomcat Server
-COPY --chown=1000 --from=builder $CATALINA_HOME $CATALINA_HOME
-# The core GeoServer
-COPY --chown=1000 --from=builder /tmp/geoserver-war-unpacked /usr/local/tomcat/webapps/geoserver/
-# Official plugins
-COPY --chown=1000 --from=builder /tmp/geoserver-css-plugin /usr/local/tomcat/webapps/geoserver/WEB-INF/lib/
-COPY --chown=1000 --from=builder /tmp/geoserver-excel-plugin /usr/local/tomcat/webapps/geoserver/WEB-INF/lib/
-COPY --chown=1000 --from=builder /tmp/geoserver-gdal-plugin /usr/local/tomcat/webapps/geoserver/WEB-INF/lib/
-COPY --chown=1000 --from=builder /tmp/geoserver-wps-plugin /usr/local/tomcat/webapps/geoserver/WEB-INF/lib/
+#COPY --from=jre-build /javaruntime $JAVA_HOME
+#COPY --from=jre-build /web-app.jar /web-app.jar
 
-COPY --chown=1000 ./image-configuration/server-9.0.40.xml /usr/local/tomcat/conf/server.xml
-COPY --chown=1000 ./image-configuration/web.xml /usr/local/tomcat/webapps/geoserver/WEB-INF/web.xml
-COPY --chown=1000 ./image-configuration/context.xml /usr/local/tomcat/webapps/geoserver/META-INF/context.xml
-
-COPY --chown=1000 ./image-configuration/esk8 /usr/local/tomcat/webapps/geoserver/data/workspaces/esk8
-USER 1000
-EXPOSE 8081
-HEALTHCHECK CMD curl --fail http://localhost:8081/web/wicket/bookmarkable/org.geoserver.web.demo.MapPreviewPage || exit 1
-CMD ["catalina.sh", "run"]
+CMD ["java","-jar","/web-app.jar"]
